Changed some files, added tmux config repo, optimized the installer

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "zsh/plugins/alias-tips"]
 	path = zsh/plugins/alias-tips
 	url = https://github.com/djui/alias-tips.git
+[submodule "tmux"]
+	path = tmux
+	url = https://github.com/gpakosz/.tmux.git
