--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,9 @@
 	path = zsh/plugins/alias-tips
 	url = https://github.com/djui/alias-tips.git
 
+[submodule "tmux/tmux_gpakosz"]
+	path = tmux/tmux_gpakosz
+	url = https://github.com/gpakosz/.tmux.git
+[submodule "tmux/tpm"]
+	path = tmux/tpm
+	url = https://github.com/tmux-plugins/tpm
