--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,10 @@
 [submodule "zsh/plugins/zsh-syntax-highlighting"]
 	path = zsh/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+	branch = origin/master
 [submodule "zsh/plugins/zsh-autosuggestions"]
 	path = zsh/plugins/zsh-autosuggestions
-	url = git://github.com/zsh-users/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
 [submodule "zsh/plugins/alias-tips"]
 	path = zsh/plugins/alias-tips
 	url = https://github.com/djui/alias-tips.git
